Fix UI on IOS

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 .app {
@@ -30,19 +31,6 @@ body {
   display: flex;
   justify-content: space-evenly;
 }
-
-@media screen and (max-width: 290px) {
-  .app {
-    width: 230px;
-  }
-}
-
-@media screen and (max-width: 415px) {
-  .app {
-    width: 300px;
-  }
-}
-
 
 
 .score-section {
@@ -110,9 +98,6 @@ button {
   background-color: #ff3333;
 }
 
-button:hover {
-  background-color: #555e7d;
-}
 
 button:focus {
   outline: none;
@@ -155,7 +140,6 @@ button svg {
   outline: none;
   background: transparent;
 }
-
 .login-box form .submit-button{
   padding: 5px 30px;
   margin-bottom: 20px;
@@ -174,8 +158,11 @@ button svg {
   cursor: pointer;
 }
 
-.login-box .submit-button:hover {
-  background-color: #555e7d;
+
+@media(hover: hover) and (pointer: fine) {
+  button:hover {
+    background-color: #555e7d;
+  }
 }
 
 /* Remove arrow keys in number input */
@@ -189,4 +176,28 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+
+@media screen and (max-width: 290px) {
+  .app {
+    width: 230px;
+  }
+
+  .login-box {
+	top: 55%;
+  }
+
+}
+
+
+@media screen and (max-width: 415px) {
+  .app {
+    width: 300px;
+  }
+
+  .login-box {
+	top: 55%;
+  }
+
 }
